# rust-sal-3dlib

./: .gitignore  Cargo.toml
.github/workflows/: coverage.sh  test.yaml
crates/sal-3dlib/: Cargo.toml
crates/sal-3dlib-core/: Cargo.toml
crates/sal-3dlib-core/src/: bound.rs  gmath.rs  lib.rs  ops.rs  props.rs  topology.rs
crates/sal-3dlib-core/src/gmath/: point.rs  vector.rs
crates/sal-3dlib-core/src/ops/: boolean.rs  transform.rs
crates/sal-3dlib-core/src/ops/boolean/: volume.rs
crates/sal-3dlib-core/src/topology/: shape.rs
crates/sal-3dlib-core/src/topology/shape/: compound.rs  edge.rs  face.rs  shell.rs  solid.rs  vertex.rs  wire.rs
crates/sal-3dlib/src/: lib.rs
crates/sal-3dlib/src/ops/: transform.rs
crates/sal-3dlib/src/ops/boolean/: volume.rs
crates/sal-3dlib/src/topology/shape/: shell.rs  solid.rs  vertex.rs
crates/sal-3dlib/tests/: hull_shell.step  integration_test.rs
crates/sal-occt-rs/: Cargo.toml
crates/sal-occt-rs/src/: fs.rs  gmath.rs  lib.rs  ops.rs  tests.rs  topology.rs
crates/sal-occt-rs/src/gmath/: point.rs  vector.rs
crates/sal-occt-rs/src/ops/: boolean.rs
crates/sal-occt-rs/src/ops/boolean/: volume.rs
crates/sal-occt-rs/src/tests/: fs_test.rs
crates/sal-occt-rs/src/tests/fs_test/assets/: primitives.stp
crates/sal-occt-rs/src/topology/: shape.rs
crates/sal-occt-rs/src/topology/shape/: compound.rs  edge.rs  face.rs  shell.rs  solid.rs  vertex.rs  wire.rs
crates/sal-occt-rs/tests/: integration_test.rs
research/try-occt-rs/: .gitignore  Cargo.toml
research/try-occt-rs/models/: ship_for_a.stp
research/try-occt-rs/src/: cli.rs  main.rs
src/: bound.rs  gmath.rs  lib.rs  ops.rs  props.rs  topology.rs
src/gmath/: point.rs  vector.rs
src/ops/: boolean.rs  transform.rs
src/ops/boolean/: volume.rs
src/tests/research/try-occt-rs/: bop_test.rs  cli.rs
src/tests/research/try-occt-rs/occt-sys-changes/: occt-sys-changes.rs
src/tests/unit/bops/bop_xyz/: bop_xyz_test.rs
src/topology/: compound.rs  shape.rs
src/topology/shape/: compound.rs  edge.rs  face.rs  shell.rs  solid.rs  vertex.rs  wire.rs
