[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["research/try-occt-rs"]

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.0.1" }
env_logger = "^0.11"
log = "^0.4"
sal-sync = { git = "https://github.com/a-givertzman/rust-sal-sync.git" }
testing = { git = "https://github.com/a-givertzman/rust-testing.git" }
