[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["research/try-occt-rs"]

[workspace.package]
edition = "2024"
version = "0.0.9"

[workspace.dependencies]
log = "^0.4"
env_logger = "^0.11"
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.0.1" }
sal-sync = { git = "https://github.com/a-givertzman/rust-sal-sync.git", tag = "0.2.0" }
testing = { git = "https://github.com/a-givertzman/rust-testing.git", tag = "0.1.2" }
