[package]
name = "sal-occt-rs"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.93"
cxx = "1.0.130"
glam = { version = "0.24", features = ["bytemuck"] }
sal-3dlib-core = { path = "../sal-3dlib-core/" }
# opencascade = { path = "../../../opencascade-rs/crates/opencascade" }
opencascade = { git = "https://github.com/a-givertzman/opencascade-rs.git", tag = "0.0.2" }
sal-core.workspace = true
sal-sync.workspace = true

[dev-dependencies]
debugging.workspace = true
env_logger.workspace = true
log.workspace = true
testing.workspace = true
