[package]
name = "try-occt-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4", features = ["derive"] }
cxx = "1.0.128"
examples = { path = "../../../opencascade-rs/crates/opencascade" }
# examples = { git = "https://github.com/novartole/opencascade-rs.git", branch = "try-occt-rs" }
glam = { version = "^0.24", features = ["bytemuck"] }
opencascade = { path = "../../../opencascade-rs/crates/opencascade" }
# opencascade = { git = "https://github.com/novartole/opencascade-rs.git", branch = "try-occt-rs" }

[features]
default = ["verbose"]
verbose = []
